--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <header class="site-header">
   <div class="wrapper">
-    <a href="{{ site.baseurl }}/"><img class="logo" src="/assets/img/logo.svg" /></a>
+    <a href="{{ site.baseurl }}/" class="logo"><img src="/assets/img/icon_dot_white.png" class="logo-img" />&thinsp;Shoya Ishimaru</a>
     <nav class="site-nav">
       <a href="#" class="menu-icon">
         <svg viewBox="0 0 18 15">
@@ -13,8 +13,7 @@
           <a class="page-link" href="/blog/">Blog</a>
           <a class="page-link" href="/publications/">Publications</a>
           <a class="page-link" href="/applications/">Applications</a>
-          <a class="page-link" href="http://photo.shoya.io" target="_blank">Photos</a>
-          <a class="page-link" href="/aboutme/">About</a>
+          <a class="page-link" href="/aboutme/">About me</a>
       </div>
     </nav>
   </div>
