--- a/_layouts/entries.html
+++ b/_layouts/entries.html
@@ -19,7 +19,7 @@ layout: default
               <a href="{{ post.url | prepend: site.baseurl }}"></a>
               <span class="post-meta">
               	{{ post.date | date: "%b %-d, %Y" }}
-              	{% for tag in post.tags %}[{{ tag }}]{% endfor %}
+              	{% for tag in post.tags %}#{{ tag }} {% endfor %}
               </span>
               <h2 class="post-link">{{ post.title }}</h2>
           </div>
