--- a/_layouts/project.html
+++ b/_layouts/project.html
@@ -6,39 +6,24 @@ layout: default
     <div class="wrapper-inside">
       <div class="post">
         <header class="post-header">
-          <p class="post-meta">{{ page.date | date: "%b %-d, %Y" }}
-          {% for tag in page.tags %}
-          <a href="/tag/{{tag}}/">#{{ tag }}</a>
-          {% endfor %}
-          </p>
           <a href="{{ page.url }}"><h2 class="post-title">{{ page.title }}</h2></a>
         </header>
         <article class="post-content">
           {{ content }}
         </article>
-        <div class="post-relations">
-          {% if page.relations %}
-          <h2>関連記事</h2>
-          <ul>
-          {% for relation in page.relations %}
-            <li><a href="/blog/{{relation}}/" class="linkedTitle">Now loading..</a></li>
-          {% endfor %}
-          </ul>
-          {% endif %}
-        </div>
         <div class="post-social">
           <div class="tweet-button"><a href="https://twitter.com/share?text={{ page.title | uri_escape }}%20-%20{{ site.title | uri_escape }}&amp;url={{ site.fullurl }}{{ page.url }}"><span class="lsf" style="font-size:20px;">twitter</span> Tweet</a></div>
           <div class="facebook-button"><a href="http://www.facebook.com/sharer.php?u={{ site.fullurl }}{{ page.url }}&amp;t={{ page.title | uri_escape }}" onClick="window.open(encodeURI(decodeURI(this.href)), 'sharewindow', 'width=550, height=450, personalbar=0, toolbar=0, scrollbars=1, resizable=!'); return false;"><span class="lsf" style="font-size:20px;">facebook</span> Share</a></div>
           <div class="hatenabookmark-button"><a href="http://b.hatena.ne.jp/add?mode=confirm&amp;url={{ site.fullurl }}{{ page.url }}"><span class="lsf" style="font-size:20px;">hatenabookmark</span> Bookmark</a></div>
         </div>
         <div class="pagenation">
-          {% if page.blog_previous %}
-            <div class="page-button"><a href="{{ page.blog_previous.url }}"></a><span class="lsf">left</span> {{ page.blog_previous.title }}</div>
+          {% if page.research_previous %}
+            <div class="page-button"><a href="{{ page.research_previous.url }}"></a><span class="lsf">left</span> {{ page.research_previous.title }}</div>
           {% else %}
             <div class="page-button-disabled"><span class="lsf">left</span> Previous</div>
           {% endif %}
-          {% if page.blog_next %}
-            <div class="page-button"><a href="{{ page.blog_next.url }}"></a>{{ page.blog_next.title }} <span class="lsf">right</span></div>
+          {% if page.research_next %}
+            <div class="page-button"><a href="{{ page.research_next.url }}"></a>{{ page.research_next.title }} <span class="lsf">right</span></div>
           {% else %}
             <div class="page-button-disabled">Next <span class="lsf">right</span></div>
           {% endif %}
